修改首页备份文件css路径

--- a/indexbak.html
+++ b/indexbak.html
@@ -10,7 +10,7 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" /> 
   <title>百度</title> 
   <!--<style type="text/css" src="/index.css"></style>--> 
-  <link type="text/css" href="index.css" rel="stylesheet" /> 
+  <link type="text/css" href="css/index.css" rel="stylesheet" /> 
  </head> 
  <body id="container"> 
   <div id="header"> 
