--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta content="html,css" name="keywords">
 <!-- 告知浏览器返回文档类型及字符集 -->
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<title>百度</title>
+<title>度娘</title>
 
 <!--<style type="text/css" src="/index.css"></style>-->
 <link type="text/css" href="css/index.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 			<form id="form" class="fm" action="" >
 				<span class="allspan">
 					<input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off">
-				</span><span class="bg s_btn_wr"><input id="su" value="百度一下" class="s_btn" type="submit"></span>
+				</span><span class="bg s_btn_wr"><input id="su" value="度娘一下" class="s_btn" type="submit"></span>
 			</form>
 		</div>
 		</div>	
@@ -43,9 +43,9 @@
 
 	<div id="footer">
 		<div id="lh">
-			<a class="lhf" href="https://www.baidu.com/cache/sethelp/help.html">把百度设为主页</a><a class="lhf" href="http://home.baidu.com">关于百度</a><a class="lhf" href="http://ir.baidu.com">About&nbsp;&nbsp;Baidu</a>
+			<a class="lhf" href="https://www.baidu.com/cache/sethelp/help.html">把度娘设为主页</a><a class="lhf" href="http://home.baidu.com">关于度娘</a><a class="lhf" href="http://ir.baidu.com">About&nbsp;&nbsp;DuNiang</a>
 		</div>
-		<div id="cp">&copy;2015&nbsp;Baidu&nbsp;<a class="hf">使用百度前必读</a>&nbsp;<a class="hf">意见反馈</a>&nbsp;京ICP证030173号&nbsp;<i class="c-icon-icrlogo"></i></div>
+		<div id="cp">&copy;2015&nbsp;DuNiang&nbsp;<a class="hf">使用度娘前必读</a>&nbsp;<a class="hf">意见反馈</a>&nbsp;京ICP证X1PPPX号&nbsp;<i class="c-icon-icrlogo"></i></div>
 	</div>
 
 </body>
